# hello-world

./: CMakeLists.txt  README.md  build.sh  install.sh
include/: helloworld.h
scripts/: raspberrypi.ld
src/: helloworld
toolchains/: raspberrypi.cmake
